syntax = "proto3";

package dpma;

message Patent {
  string id = 1;
  string applicant = 2;
  string application_date = 3;
  string title = 4;
  repeated string inventor = 5;
  string ipc_class = 6;
  string publication_date = 7;
  repeated string legal_agents = 8;
  string company_reference = 10;
}
